<resources>
    <string name="app_name">InventoryApp</string>
    <string name="action_settings">Settings</string>
    <string name="empty_view_title_text">There is nothing in the inventory now.</string>
    <string name="empty_view_subtitle_text">Pressing the Inventory button below to start \n We support Name, Price and Quantity at this time</string>
    <string name="item_name">Item name</string>
    <string name="hint_inv_name">Google Pixel</string>
    <string name="item_quantity">Overview</string>

    <string name="label_price">Price: $</string>
    <string name="hint_inv_price">649</string>
    <string name="price_inv">USD</string>

    <string name="label_quantity">Quantity: </string>
    <string name="hint_inv_quantity">10</string>
    <string name="unit_inv">piece(s)</string>

    <string name="label_sold">Sold Quantity: </string>
    <string name="hint_inv_sold">8</string>
    <string name="label_image">Produc Image</string>

    <!-- Menu button-->
    <string name="action_delete">Delete item</string>
    <string name="action_save">Save item</string>

    <string name="editor_activity_title_new_item">Add a new item</string>
    <string name="editor_activity_title_edit_item">Edit an existing item</string>
    <string name="editor_insert_inv_failed">Error with saving item</string>
    <string name="editor_insert_inv_successful">Item saved to inventory</string>
    <string name="editor_update_inv_failed">Error with updating item</string>
    <string name="editor_update_inv_successful">Item updated successfully</string>
    <string name="editor_delete_inv_failed">Error with deleting item</string>
    <string name="editor_delete_inv_successful">Item deleted</string>
    <string name="editor_quantity_edit_failed">Quantity or Price cannot be a negative number</string>
    <string name="editor_empty_not_allow">Empty product information is not allowed</string>

    <!-- Dialog message when user is leaving editor but hasn't saved changes [CHAR LIMIT=NONE] -->
    <string name="unsaved_changes_dialog_msg">Discard your changes and quit editing?</string>

    <!-- Dialog button text for the option to discard a user's changes [CHAR LIMIT=20] -->
    <string name="discard">Discard</string>

    <!-- Dialog button text for the option to keep editing the current pet [CHAR LIMIT=20] -->
    <string name="keep_editing">Keep Editing</string>
    <!-- Dialog message to ask the user to confirm deleting the current pet [CHAR LIMIT=NONE] -->
    <string name="delete_dialog_msg">Delete this item?</string>
    <!-- Dialog button text for the option to confirm deleting the current pet [CHAR LIMIT=20] -->
    <string name="delete">Delete</string>
    <!-- Dialog button text for the option to cancel deletion of the current pet [CHAR LIMIT=20] -->
    <string name="cancel">Cancel</string>

    <string name="inventory_guideline"> - Click Sell to reduce the inventory by 1 unit
        \n- Click Restock to increase the inventory by 1 unit
        \n- Click Buy to contact Supplier</string>

    <string name="selectImage">Select Image</string>
    <string name="sell">Sell</string>
    <string name="restock">Restock</string>
    <string name="ordermore">Order more</string>
</resources>
